Fix: #49: Data API Stub (#50)
* Fix: #49. Data API stub.

* Data API tests.

* OAS: Problem.type not required.

* Improve error management.
